Complete SEO optimization: meta tags, social sharing, favicons, sitemap, and manifest

--- a/index.html
+++ b/index.html
@@ -3,34 +3,67 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ghana Electric Vehicles A75 Mobility - Sustainable Transportation Solutions</title>
+
+  <!-- Primary Meta Tags -->
+  <title>A75 Mobility Ghana - Electric Vehicles & Sustainable Transportation Solutions</title>
+  <meta name="title" content="A75 Mobility Ghana - Electric Vehicles & Sustainable Transportation Solutions" />
   <meta name="description"
-    content="A75 Electric & Fuel-Powered Mobility Ltd - Leading provider of electric and fuel-powered vehicles in Ghana. Importing, assembling, and distributing sustainable mobility solutions across West Africa with comprehensive charging infrastructure." />
+    content="Leading provider of electric and fuel-powered vehicles in Ghana. A75 Mobility offers sustainable transportation solutions, EV charging infrastructure, and vehicle assembly services across West Africa." />
   <meta name="keywords"
-    content="electric vehicles Ghana, sustainable transportation, vehicle assembly Ghana, EV charging infrastructure, mobility solutions West Africa" />
-  <link rel="canonical" href="https://example.com/" />
-  <meta name="last-modified" content="2024-12-19" />
+    content="electric vehicles Ghana, EV Ghana, sustainable transportation Ghana, electric cars Ghana, electric motorcycles Ghana, EV charging stations Ghana, vehicle assembly Ghana, A75 Mobility, electric vehicle company Ghana, green transportation West Africa, eco-friendly vehicles Ghana, zero emission vehicles, electric vehicle importation Ghana, EV infrastructure Ghana, sustainable mobility solutions" />
+  <meta name="author" content="A75 Electric & Fuel-Powered Mobility Ltd" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="language" content="English" />
+  <meta name="revisit-after" content="7 days" />
+  <meta name="last-modified" content="2026-01-15" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://a75mobility.vercel.app/" />
 
   <!-- Geo Tags -->
   <meta name="geo.region" content="GH" />
   <meta name="geo.placename" content="Ghana" />
   <meta name="geo.position" content="7.9465;-1.0232" />
+  <meta name="ICBM" content="7.9465, -1.0232" />
 
-  <!-- Social Media Tags -->
-  <meta property="og:title" content="Ghana Electric Vehicles A75 Mobility - Sustainable Transportation Solutions" />
-  <meta property="og:description"
-    content="A75 Electric & Fuel-Powered Mobility Ltd - Leading provider of electric and fuel-powered vehicles in Ghana. Importing, assembling, and distributing sustainable mobility solutions across West Africa." />
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://example.com/" />
-  <meta property="og:site_name" content="A75 Mobility" />
+  <meta property="og:url" content="https://a75mobility.vercel.app/" />
+  <meta property="og:site_name" content="A75 Mobility Ghana" />
+  <meta property="og:title" content="A75 Mobility Ghana - Electric Vehicles & Sustainable Transportation" />
+  <meta property="og:description"
+    content="Leading provider of electric and fuel-powered vehicles in Ghana. Sustainable transportation solutions, EV charging infrastructure, and vehicle assembly across West Africa." />
+  <meta property="og:image" content="https://a75mobility.vercel.app/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="A75 Mobility - Sustainable Transportation Solutions for Ghana & West Africa" />
+  <meta property="og:locale" content="en_GH" />
 
+  <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Ghana Electric Vehicles A75 Mobility - Sustainable Transportation Solutions" />
+  <meta name="twitter:url" content="https://a75mobility.vercel.app/" />
+  <meta name="twitter:title" content="A75 Mobility Ghana - Electric Vehicles & Sustainable Transportation" />
   <meta name="twitter:description"
-    content="Leading provider of electric and fuel-powered vehicles in Ghana with comprehensive charging infrastructure." />
+    content="Leading provider of electric and fuel-powered vehicles in Ghana. Sustainable transportation solutions across West Africa." />
+  <meta name="twitter:image" content="https://a75mobility.vercel.app/og-image.png" />
+  <meta name="twitter:image:alt" content="A75 Mobility - Electric Vehicles Ghana" />
 
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
+  <link rel="shortcut icon" href="/favicon.png" />
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#0B1A33" />
+  <meta name="msapplication-TileColor" content="#0B1A33" />
+  <meta name="msapplication-TileImage" content="/logo.png" />
+
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.json" />
+
+  <!-- Preconnect for Performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Inter:wght@300;400;500;600;700&display=swap"
